<?xml version="1.0" encoding="utf-8"?>
<resources>


    <string-array name="country_arrays">
        <item>Malaysia</item>
        <item>United States</item>
        <item>Indonesia</item>
        <item>France</item>
        <item>Italy</item>
        <item>Singapore</item>
        <item>New Zealand</item>
        <item>India</item>
    </string-array>

    <string-array name="City">
        <item>Select City</item>
    </string-array>

    <string-array name="Class">
        <item>Select Class</item>
    </string-array>

    <string-array name="Subject">
        <item>Select Subject</item>
    </string-array>

    <string name="app_name">Vision Tutor</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="email">Email Id</string>
    <string name="passowrd">Password</string>
    <string name="login">LOGIN</string>
    <string name="show_pwd">Show Password</string>
    <string name="hide_pwd">Hide Password</string>
    <string name="forgot">Forgot password?</string>
    <string name="closebutton">Close Button for Activity</string>
    <string name="newUser">Not a Member yet? Sign Up here.</string>
    <string name="fullName">Full Name</string>
    <string name="mobileNumber">Mobile Number</string>
    <string name="location">Location</string>
    <string name="confirmPassword">Confirm Password</string>
    <string name="terms_conditions">By clicking SignUp you agree all the Terms and Conditions.</string>
    <string name="signUp">SIGN UP</string>
    <string name="already_user">Already have Account? Login here.</string>
    <string name="registered_emailid">Please enter your Registered Email Id below:</string>
    <string name="submit">SUBMIT</string>
    <string name="back">BACK</string>
    <string name="reviewins">1. Your Review is visible to the Tutor\n2. You can always update a review by adding a new review\n3. If you want to read your earlier reviews, Go to the review section in tutor profile</string>
    <string name="proceed">Proceed</string>
    <string name="login_both_empty">Enter both credentials.</string>
    <string name="login_email_invalid">Your Email Id is Invalid.</string>
    <string name="login_any_invalid">Wrong email or password</string>
    <string name="error_occured">Some Error Occurred</string>
    <string name="search_a_tutor">Search A Tutor</string>
    <string name="i_am_a_tutor">I am a Tutor</string>
    <string name="i_am_a_student">I am a Student</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
</resources>