<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical">


    <androidx.cardview.widget.CardView xmlns:card_view="http://schemas.android.com/apk/res-auto"
        android:id="@+id/card_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="center"
        android:layout_margin="5dp"
        card_view:cardCornerRadius="5dp">


        <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:orientation="vertical"
            android:paddingBottom="20dp"
            android:paddingLeft="20dp"
            android:paddingRight="20dp"
            android:paddingTop="10dp">

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:padding="5dp"
                android:text="@string/signUp"
                android:textColor="@color/black"
                android:textSize="25sp"
                android:textStyle="bold" />

            <ToggleButton
                android:id="@+id/signup_toggle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:checked="true"
                android:textOff="@string/i_am_a_tutor"
                android:textOn="@string/i_am_a_student" />

            <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">


                <EditText
                    android:id="@+id/signup_fname"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:background="@color/white_greyish"
                    android:drawableStart="@drawable/user"
                    android:drawablePadding="8dp"
                    android:gravity="center_vertical"
                    android:hint="@string/first_name"
                    android:inputType="textCapWords"
                    android:padding="10dp"
                    android:singleLine="true"
                    android:textColor="@color/colorPrimary"
                    android:textColorHint="@color/colorPrimary"
                    android:textSize="16sp" />

                <EditText
                    android:id="@+id/signup_lname"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="5dp"
                    android:layout_marginTop="10dp"
                    android:background="@color/white_greyish"
                    android:gravity="center_vertical"
                    android:hint="@string/last_name"
                    android:inputType="textCapWords"
                    android:padding="10dp"
                    android:singleLine="true"
                    android:textColor="@color/colorPrimary"
                    android:textColorHint="@color/colorPrimary"
                    android:textSize="16sp" />
            </LinearLayout>

            <View
                android:layout_width="fill_parent"
                android:layout_height="1px"
                android:background="@color/white_greyish" />

            <EditText
                android:id="@+id/signup_email"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:background="@color/white_greyish"
                android:drawableStart="@drawable/email"
                android:drawablePadding="8dp"
                android:gravity="center_vertical"
                android:hint="@string/email"
                android:inputType="textEmailAddress"
                android:padding="10dp"
                android:singleLine="true"
                android:textColor="@color/colorPrimary"
                android:textColorHint="@color/colorPrimary"
                android:textSize="16sp" />

            <View
                android:layout_width="fill_parent"
                android:layout_height="1px"
                android:background="@color/white_greyish" />

            <EditText
                android:id="@+id/signup_mobile"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:background="@color/white_greyish"
                android:drawableStart="@drawable/phone"
                android:drawablePadding="8dp"
                android:gravity="center_vertical"
                android:hint="@string/mobileNumber"
                android:inputType="phone"
                android:padding="10dp"
                android:singleLine="true"
                android:textColor="@color/colorPrimary"
                android:textColorHint="@color/colorPrimary"
                android:textSize="16sp" />

            <View
                android:layout_width="fill_parent"
                android:layout_height="1px"
                android:background="@color/white_greyish" />

            <Spinner
                android:id="@+id/signup_cities"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="5dp"
                android:entries="@array/City"
                android:padding="10dp"
                android:textColor="@color/colorPrimary"
                android:textColorHint="@color/colorPrimary"
                android:textSize="16sp"
                android:gravity="center_vertical"
                android:background="@color/white_greyish"
                />


            <View
                android:layout_width="fill_parent"
                android:layout_height="1px"
                android:background="@color/white_greyish" />

            <EditText
                android:id="@+id/signup_pswd"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:background="@color/white_greyish"
                android:drawableStart="@drawable/password"
                android:drawablePadding="8dp"
                android:gravity="center_vertical"
                android:hint="@string/passowrd"
                android:inputType="textPassword"
                android:padding="10dp"
                android:singleLine="true"
                android:textColor="@color/colorPrimary"
                android:textColorHint="@color/colorPrimary"
                android:textSize="16sp" />

            <View
                android:layout_width="fill_parent"
                android:layout_height="1px"
                android:background="@color/white_greyish" />

            <EditText
                android:id="@+id/signup_confirm_pswd"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:background="@color/white_greyish"
                android:drawableStart="@drawable/confirm_password"
                android:drawablePadding="8dp"
                android:gravity="center_vertical"
                android:hint="@string/confirmPassword"
                android:inputType="textPassword"
                android:padding="10dp"
                android:singleLine="true"
                android:textColor="@color/colorPrimary"
                android:textColorHint="@color/colorPrimary"
                android:textSize="16sp" />

            <CheckBox
                android:id="@+id/signup_terms"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="7dp"
                android:text="@string/terms_conditions"
                android:textColor="@color/colorPrimary"
                android:textSize="14sp" />

            <Button
                android:id="@+id/signup_btn"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:background="@drawable/loginbutton_selector"
                android:padding="3dp"
                android:text="@string/signUp"
                android:textColor="@color/white"
                android:textSize="17sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/signup_existing_user"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="5dp"
                android:gravity="center"
                android:padding="10dp"
                android:text="@string/already_user"
                android:textColor="@color/colorPrimary"
                android:textSize="15sp" />

        </LinearLayout>

    </androidx.cardview.widget.CardView>
</LinearLayout>